--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -2,5 +2,12 @@
 $grey: #333333;
 
 // Navigation colors
-
 $nav-background: $grey;
+$nav-text-color: white;
+
+// Clock variables
+$clock-text-color: white;
+$clock-bg-color: #B5D0E2;
+$clock-border-color: #2099E8;
+
+// Countdown Form
