--- a/app/styles/components/_navigation.scss
+++ b/app/styles/components/_navigation.scss
@@ -1,8 +1,17 @@
-.tob-bar {
+.top-bar, .top-bar ul {
   background-color: $nav-background;
 }
 
 .top-bar {
+  .menu-text {
+    color: $nav-text-color;
+  }
+
+  .menu > .menu-text > a {
+    display: inline;
+    padding: 0;
+  }
+
   .active-link {
     font-weight: bold;
   }
